--- a/package.json
+++ b/package.json
@@ -1,34 +1,27 @@
 {
-  "name": "udg-archi-os-ultimate",
+  "name": "udg-pre-plan-submission-checker",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
+  "version": "1.0.0",
   "scripts": {
     "dev": "vite",
-    "dev:full": "node server/index.js",
     "build": "vite build",
-    "preview": "vite preview",
-    "server": "node server/index.js"
+    "preview": "vite preview --port 5173",
+    "server": "node server/index.js",
+    "start": "npm-run-all -p server dev"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "@google/genai": "^1.35.0",
-    "jspdf": "^4.0.0",
-    "lucide-react": "^0.562.0",
-    "three": "^0.182.0",
-    "express": "^4.21.2",
     "cors": "^2.8.5",
-    "@turf/turf": "^7.2.0",
-    "jszip": "^3.10.1",
-    "pdf-lib": "^1.17.1",
-    "mapbox-gl": "^3.7.0",
-    "pdf-parse": "^1.1.1"
+    "express": "^4.19.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.3.5",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "npm-run-all": "^4.1.5",
+    "typescript": "^5.6.2",
+    "vite": "^5.4.6"
   }
 }
